<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/home_view_pager"
        android:layout_width="match_parent"
        android:layout_above="@+id/radio_group"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/style_RadioButton"
            android:checked="true"
            android:drawableTop="@drawable/home_page_log"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_category"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/category_log"
            android:text="@string/category" />

        <RadioButton
            android:id="@+id/rb_fun"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/fun_log"
            android:text="@string/fun" />

        <RadioButton
            android:id="@+id/rb_shopping"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/shopping_cart_log"
            android:text="@string/shopping" />

        <RadioButton
            android:id="@+id/rb_mycenter"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/mycenter_log"
            android:text="@string/mycenter" />
    </RadioGroup>
</RelativeLayout>
